--- a/GPTChatbotWeb/frontend/index.html
+++ b/GPTChatbotWeb/frontend/index.html
@@ -1,39 +1,74 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>GPT Chatbot</title>
   <style>
-    body { font-family: Arial; padding: 2em; background: #f5f5f5; }
-    #chatbox { border: 1px solid #ccc; background: white; padding: 1em; height: 400px; overflow-y: scroll; }
-    input, button { margin-top: 1em; width: 100%; padding: 0.5em; }
+    body { font-family: Arial; padding: 2em; background: #f0f0f0; }
+    #chatbox { background: white; border: 1px solid #ccc; padding: 1em; height: 400px; overflow-y: scroll; }
+    input, select, button { margin-top: 0.5em; padding: 0.5em; width: 100%; box-sizing: border-box; }
   </style>
 </head>
 <body>
-  <h2>GPT Chatbot</h2>
-  <div id="chatbox"></div>
-  <input id="userInput" placeholder="Type your message..." />
-  <button onclick="sendMessage()">Send</button>
+  <h2>🔐 GPT 챗봇 (비밀번호: 12345678)</h2>
+  <input id="password" type="password" placeholder="비밀번호 입력" />
+  <div id="chatUI" style="display:none;">
+    <div id="chatbox"></div>
+    <input id="userInput" placeholder="메시지를 입력하세요..." />
+    <select id="model">
+      <option value="gpt-4">GPT-4</option>
+      <option value="gpt-3.5-turbo">GPT-3.5</option>
+    </select>
+    <button onclick="sendMessage()">보내기</button>
+    <button onclick="saveChat()">💾 저장</button>
+  </div>
+
   <script>
-    const chatbox = document.getElementById('chatbox');
-    const input = document.getElementById('userInput');
     let history = [];
 
+    document.getElementById("password").addEventListener("keydown", function(e) {
+      if (e.key === "Enter") {
+        document.getElementById("chatUI").style.display = "block";
+        document.getElementById("password").style.display = "none";
+      }
+    });
+
     async function sendMessage() {
-      const message = input.value;
+      const input = document.getElementById('userInput');
+      const model = document.getElementById('model').value;
+      const password = document.getElementById('password').value;
+      const message = input.value.trim();
       if (!message) return;
-      chatbox.innerHTML += `<div><b>You:</b> ${message}</div>`;
+
+      const chatbox = document.getElementById('chatbox');
+      chatbox.innerHTML += `<div><b>👤 나:</b> ${message}</div>`;
       input.value = '';
+
       const res = await fetch('/chat', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ message, history })
+        body: JSON.stringify({ message, history, password, model })
       });
+
+      if (res.status === 403) {
+        alert("❌ 비밀번호가 틀렸습니다");
+        return;
+      }
+
       const data = await res.json();
       history = data.history;
-      chatbox.innerHTML += `<div><b>GPT:</b> ${data.reply}</div>`;
+      chatbox.innerHTML += `<div><b>🤖 GPT:</b> ${data.reply}</div>`;
       chatbox.scrollTop = chatbox.scrollHeight;
+    }
+
+    function saveChat() {
+      const blob = new Blob([JSON.stringify(history, null, 2)], { type: 'application/json' });
+      const link = document.createElement('a');
+      link.href = URL.createObjectURL(blob);
+      link.download = 'chat_history.json';
+      link.click();
     }
   </script>
 </body>
 </html>
+
