--- a/GPTChatbotWeb/frontend/index.html
+++ b/GPTChatbotWeb/frontend/index.html
@@ -1,123 +1,33 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html>
 <head>
   <meta charset="UTF-8" />
-  <title>GPT 챗봇 (3단계 관리자 + 다크모드)</title>
+  <title>GPT 챗봇 (파일·음성·이미지 입력)</title>
   <style>
-    :root {
-      --bg-light: #f5f5f5;
-      --bg-dark: #121212;
-      --text-light: #000;
-      --text-dark: #eee;
-      --chat-bg-light: #fff;
-      --chat-bg-dark: #222;
-      --user-color: #007bff;
-      --bot-color: #28a745;
-      --btn-bg: #007bff;
-      --btn-color: #fff;
-    }
-    body.light {
-      background: var(--bg-light);
-      color: var(--text-light);
-    }
-    body.dark {
-      background: var(--bg-dark);
-      color: var(--text-dark);
-    }
-    #login, #chat, #adminView {
-      max-width: 700px;
-      margin: 2em auto;
-      padding: 2em;
-      border-radius: 10px;
-      background: var(--chat-bg-light);
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    body.dark #login,
-    body.dark #chat,
-    body.dark #adminView {
-      background: var(--chat-bg-dark);
-      box-shadow: 0 0 15px rgba(255,255,255,0.1);
-    }
-    #chat, #adminView {
-      display: none;
-    }
-    #chatbox, #adminLog {
-      height: 300px;
-      overflow-y: auto;
-      border: 1px solid #ccc;
-      padding: 1em;
-      margin-bottom: 1em;
-      background: var(--chat-bg-light);
-    }
-    body.dark #chatbox, body.dark #adminLog {
-      background: var(--chat-bg-dark);
-      border-color: #555;
-    }
-    input, select, button, textarea {
-      width: 100%;
-      padding: 0.7em;
-      margin-top: 0.5em;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      background: inherit;
-      color: inherit;
-    }
-    body.dark input, body.dark select, body.dark button, body.dark textarea {
-      border-color: #555;
-      background: #333;
-      color: #eee;
-    }
-    button {
-      background-color: var(--btn-bg);
-      color: var(--btn-color);
-      cursor: pointer;
-      font-weight: bold;
-    }
-    button:disabled {
-      background-color: #888;
-      cursor: default;
-    }
-    .msg {
-      margin: 0.5em 0;
-      white-space: pre-wrap;
-    }
-    .user {
-      font-weight: bold;
-      color: var(--user-color);
-    }
-    .bot {
-      font-weight: bold;
-      color: var(--bot-color);
-    }
-    #themeToggle {
-      float: right;
-      margin-top: -2.5em;
-      margin-bottom: 1em;
-      width: auto;
-      padding: 0.4em 1em;
-    }
-    hr {
-      margin: 2em 0;
-      border: none;
-      border-top: 1px solid #ccc;
-    }
+    body { font-family: Arial; padding: 2em; background: #f5f5f5; }
+    #login, #chat { max-width: 700px; margin: auto; background: white; padding: 2em; border-radius: 10px; }
+    #chat { display: none; }
+    #chatbox { height: 300px; overflow-y: scroll; border: 1px solid #ccc; padding: 1em; margin-bottom: 1em; background: #fefefe; }
+    input, select, button, textarea { width: 100%; padding: 0.7em; margin-top: 0.5em; }
+    .msg { margin: 0.5em 0; }
+    .user { font-weight: bold; color: #007bff; }
+    .bot { font-weight: bold; color: #28a745; }
   </style>
 </head>
-<body class="light">
+<body>
 
 <div id="login">
   <h2>🔐 GPT 챗봇 로그인</h2>
-  <input id="username" placeholder="사용자 이름 (관리자는 admin)" autocomplete="username" />
-  <input id="password" type="password" placeholder="비밀번호 (기본: 12345678)" autocomplete="current-password" />
-  <button id="loginBtn" onclick="login()">로그인</button>
+  <input id="username" placeholder="사용자 이름" />
+  <input id="password" type="password" placeholder="비밀번호 (기본: 12345678)" />
+  <button onclick="login()">로그인</button>
   <p id="loginStatus" style="color:red;"></p>
 </div>
 
 <div id="chat">
-  <button id="themeToggle" onclick="toggleTheme()">🌗 다크모드 전환</button>
   <h3>👤 <span id="displayName"></span>님, 환영합니다!</h3>
   <div id="chatbox"></div>
-  <input id="message" placeholder="메시지를 입력하세요..." autocomplete="off" />
+  <input id="message" placeholder="메시지를 입력하세요..." />
   <select id="model">
     <option value="gpt-4">GPT-4</option>
     <option value="gpt-3.5-turbo">GPT-3.5</option>
@@ -125,65 +35,42 @@
   <button onclick="sendMessage()">보내기</button>
   <button onclick="regenerate()">↺ 다시 생성</button>
   <button onclick="save()">💾 저장</button>
-
   <hr />
   <h4>📁 파일 업로드 (PDF / TXT)</h4>
   <input type="file" id="fileUpload" accept=".pdf,.txt" />
   <textarea id="uploadResult" rows="4" readonly placeholder="요약 결과가 여기에 표시됩니다."></textarea>
-
   <hr />
   <h4>🖼️ 이미지 업로드 (설명)</h4>
   <input type="file" id="imageUpload" accept="image/*" />
   <textarea id="imageResult" rows="4" readonly placeholder="이미지 설명 결과가 여기에 표시됩니다."></textarea>
-
   <hr />
   <h4>🎤 음성 질문</h4>
   <input type="file" id="voiceUpload" accept="audio/*" />
   <textarea id="voiceResult" rows="2" readonly placeholder="음성 인식 결과가 여기에 표시됩니다."></textarea>
 </div>
 
-<div id="adminView">
-  <h2>🧑‍💼 관리자 모드</h2>
-  <button onclick="refreshAdmin()">전체 세션 대화 기록 새로고침</button>
-  <div id="adminLog" style="white-space: pre-wrap;"></div>
-</div>
-
 <script>
 let session_id = "";
-let is_admin = false;
 let history = [];
-const body = document.body;
 
 function login() {
   const username = document.getElementById("username").value.trim();
   const password = document.getElementById("password").value.trim();
-  if (!username || !password) {
-    document.getElementById("loginStatus").innerText = "사용자 이름과 비밀번호를 입력하세요.";
-    return;
-  }
 
   fetch('/login', {
     method: 'POST',
-    headers: {'Content-Type': 'application/json'},
+    headers: { 'Content-Type': 'application/json' },
     body: JSON.stringify({ username, password })
   })
   .then(res => {
-    if (!res.ok) throw new Error("로그인 실패");
+    if (!res.ok) throw new Error("Login failed");
     return res.json();
   })
   .then(data => {
     session_id = data.session_id;
-    is_admin = data.is_admin;
     document.getElementById("login").style.display = "none";
-    if (is_admin) {
-      document.getElementById("adminView").style.display = "block";
-      refreshAdmin();
-    } else {
-      document.getElementById("chat").style.display = "block";
-    }
+    document.getElementById("chat").style.display = "block";
     document.getElementById("displayName").innerText = username;
-    document.getElementById("loginStatus").innerText = "";
-    loadTheme();
   })
   .catch(() => {
     document.getElementById("loginStatus").innerText = "❌ 로그인 실패 (비밀번호 확인)";
@@ -208,7 +95,7 @@ function sendMessage() {
 
   fetch('/chat', {
     method: 'POST',
-    headers: {'Content-Type': 'application/json'},
+    headers: { 'Content-Type': 'application/json' },
     body: JSON.stringify({ session_id, message, model })
   })
   .then(res => res.json())
@@ -221,7 +108,7 @@ function sendMessage() {
 function regenerate() {
   fetch('/chat', {
     method: 'POST',
-    headers: {'Content-Type': 'application/json'},
+    headers: { 'Content-Type': 'application/json' },
     body: JSON.stringify({ session_id, message: "[REPEAT_LAST]", model: document.getElementById("model").value })
   })
   .then(res => res.json())
@@ -232,92 +119,48 @@ function regenerate() {
 }
 
 function save() {
-  const blob = new Blob([JSON.stringify(history, null, 2)], {type:"application/json"});
+  const blob = new Blob([JSON.stringify(history, null, 2)], { type: "application/json" });
   const a = document.createElement("a");
   a.href = URL.createObjectURL(blob);
   a.download = "chat_history.json";
   a.click();
 }
 
-document.getElementById("fileUpload").addEventListener("change", function() {
+// 📁 파일 업로드
+document.getElementById("fileUpload").addEventListener("change", function () {
   const file = this.files[0];
-  if (!file) return;
   const form = new FormData();
   form.append("file", file);
-  fetch("/upload", {method:"POST", body:form})
+  fetch("/upload", { method: "POST", body: form })
     .then(res => res.json())
     .then(data => {
       document.getElementById("uploadResult").value = data.content;
     });
 });
 
-document.getElementById("imageUpload").addEventListener("change", function() {
+// 🖼️ 이미지 업로드
+document.getElementById("imageUpload").addEventListener("change", function () {
   const file = this.files[0];
-  if (!file) return;
   const form = new FormData();
   form.append("file", file);
-  fetch("/image", {method:"POST", body:form})
+  fetch("/image", { method: "POST", body: form })
     .then(res => res.json())
     .then(data => {
       document.getElementById("imageResult").value = data.description;
     });
 });
 
-document.getElementById("voiceUpload").addEventListener("change", function() {
+// 🎤 음성 업로드
+document.getElementById("voiceUpload").addEventListener("change", function () {
   const file = this.files[0];
-  if (!file) return;
   const form = new FormData();
   form.append("file", file);
-  fetch("/voice", {method:"POST", body:form})
+  fetch("/voice", { method: "POST", body: form })
     .then(res => res.json())
     .then(data => {
       document.getElementById("voiceResult").value = data.text;
     });
 });
-
-// 관리자 모드 전체 대화 기록 새로고침
-function refreshAdmin() {
-  if (!session_id || !is_admin) return;
-  fetch(`/admin?session_id=${session_id}`)
-    .then(res => res.json())
-    .then(data => {
-      const logDiv = document.getElementById("adminLog");
-      logDiv.innerHTML = "";
-      for (const [sid, sess] of Object.entries(data.all_sessions)) {
-        logDiv.innerHTML += `<b>유저:</b> ${sess.user} (세션 ID: ${sid})<br/>`;
-        for (const msg of sess.history) {
-          const roleIcon = msg.role === "user" ? "👤" : "🤖";
-          logDiv.innerHTML += `${roleIcon} <i>${msg.role}</i>: ${msg.content}<br/>`;
-        }
-        logDiv.innerHTML += "<hr/>";
-      }
-    });
-}
-
-// 다크모드 토글 & 저장
-function toggleTheme() {
-  if (body.classList.contains("light")) {
-    body.classList.replace("light", "dark");
-    localStorage.setItem("theme", "dark");
-    document.getElementById("themeToggle").innerText = "☀️ 라이트모드 전환";
-  } else {
-    body.classList.replace("dark", "light");
-    localStorage.setItem("theme", "light");
-    document.getElementById("themeToggle").innerText = "🌗 다크모드 전환";
-  }
-}
-
-function loadTheme() {
-  const saved = localStorage.getItem("theme") || "light";
-  body.classList.remove("light", "dark");
-  body.classList.add(saved);
-  document.getElementById("themeToggle").innerText = saved === "light" ? "🌗 다크모드 전환" : "☀️ 라이트모드 전환";
-}
-
-// 페이지 로드 시 기본 테마 적용
-window.onload = () => {
-  loadTheme();
-};
 </script>
 
 </body>
