--- a/GPTChatbotWeb/frontend/index.html
+++ b/GPTChatbotWeb/frontend/index.html
@@ -2,44 +2,66 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GPT 챗봇</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body { font-family: Arial; padding: 2em; background: #f5f5f5; color: #000; }
-    #chat { max-width: 700px; margin: auto; background: #fff; padding: 2em; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    #chatbox { height: 300px; overflow-y: scroll; border: 1px solid #ccc; padding: 1em; margin-bottom: 1em; background: #fefefe; }
-    input, select, button, textarea { width: 100%; padding: 0.7em; margin-top: 0.5em; border: 1px solid #ccc; border-radius: 4px; }
-    button { background-color: #007bff; color: #fff; font-weight: bold; cursor: pointer; }
-    .msg { margin: 0.5em 0; white-space: pre-wrap; }
-    .user { color: #007bff; font-weight: bold; }
-    .bot { color: #28a745; font-weight: bold; }
+    body.dark-mode { background-color: #121212; color: #f8f9fa; }
+    .chatbox { height: 400px; overflow-y: scroll; background: #f1f1f1; padding: 1em; border-radius: 0.5em; }
+    .chatbox.dark { background: #222; color: #f1f1f1; }
+    .msg-user { text-align: right; margin: 0.5em 0; }
+    .msg-bot { text-align: left; margin: 0.5em 0; }
+    .bubble { display: inline-block; padding: 0.6em 1em; border-radius: 1em; max-width: 75%; }
+    .bubble.user { background-color: #007bff; color: white; }
+    .bubble.bot { background-color: #e9ecef; color: #000; }
+    body.dark-mode .bubble.bot { background-color: #444; color: #f1f1f1; }
+    .section { margin-top: 2em; }
   </style>
 </head>
-<body>
+<body class="bg-light">
 
-<div id="chat">
-  <h2>🤖 GPT 챗봇</h2>
-  <div id="chatbox"></div>
-  <input id="message" placeholder="메시지를 입력하세요..." />
-  <select id="model">
-    <option value="gpt-4">GPT-4</option>
-    <option value="gpt-3.5-turbo">GPT-3.5</option>
-  </select>
-  <button onclick="sendMessage()">보내기</button>
-  <button onclick="regenerate()">↺ 다시 생성</button>
-  <button onclick="save()">💾 저장</button>
+<div class="container mt-4">
+  <div class="d-flex justify-content-between align-items-center">
+    <h2>🤖 GPT 챗봇</h2>
+    <button class="btn btn-sm btn-outline-secondary" id="darkToggle" onclick="toggleDark()">🌙</button>
+  </div>
 
-  <hr />
-  <h4>📁 파일 업로드 (PDF / TXT)</h4>
-  <input type="file" id="fileUpload" accept=".pdf,.txt" />
-  <textarea id="uploadResult" rows="4" readonly></textarea>
+  <div id="chatbox" class="chatbox mt-3"></div>
 
-  <h4>🖼️ 이미지 업로드</h4>
-  <input type="file" id="imageUpload" accept="image/*" />
-  <textarea id="imageResult" rows="4" readonly></textarea>
+  <div class="mt-3">
+    <input class="form-control" id="message" placeholder="메시지를 입력하세요...">
+    <div class="row mt-2">
+      <div class="col-md-6">
+        <select id="model" class="form-select">
+          <option value="gpt-4">GPT-4</option>
+          <option value="gpt-3.5-turbo">GPT-3.5</option>
+        </select>
+      </div>
+      <div class="col-md-6 d-flex gap-2">
+        <button class="btn btn-primary w-100" onclick="sendMessage()">보내기</button>
+        <button class="btn btn-secondary" onclick="regenerate()">↺</button>
+        <button class="btn btn-success" onclick="save()">💾</button>
+      </div>
+    </div>
+  </div>
 
-  <h4>🎤 음성 질문</h4>
-  <input type="file" id="voiceUpload" accept="audio/*" />
-  <textarea id="voiceResult" rows="2" readonly></textarea>
+  <div class="section">
+    <label class="form-label">📁 파일 업로드</label>
+    <input type="file" id="fileUpload" class="form-control" accept=".pdf,.txt">
+    <textarea id="uploadResult" class="form-control mt-2" rows="3" readonly></textarea>
+  </div>
+
+  <div class="section">
+    <label class="form-label">🖼 이미지 설명</label>
+    <input type="file" id="imageUpload" class="form-control" accept="image/*">
+    <textarea id="imageResult" class="form-control mt-2" rows="3" readonly></textarea>
+  </div>
+
+  <div class="section">
+    <label class="form-label">🎤 음성 입력</label>
+    <input type="file" id="voiceUpload" class="form-control" accept="audio/*">
+    <textarea id="voiceResult" class="form-control mt-2" rows="2" readonly></textarea>
+  </div>
 </div>
 
 <script>
@@ -47,49 +69,50 @@ let session_id = localStorage.getItem("session_id") || crypto.randomUUID();
 localStorage.setItem("session_id", session_id);
 let history = [];
 
-function appendMessage(role, content) {
-  const div = document.createElement("div");
-  div.className = "msg";
-  div.innerHTML = `<span class="${role === 'user' ? 'user' : 'bot'}">${role === 'user' ? '👤 나' : '🤖 GPT'}:</span> ${content}`;
-  document.getElementById("chatbox").appendChild(div);
-  document.getElementById("chatbox").scrollTop = 99999;
+function append(role, text) {
+  const box = document.getElementById("chatbox");
+  const msg = document.createElement("div");
+  msg.className = role === "user" ? "msg-user" : "msg-bot";
+  const bubble = document.createElement("div");
+  bubble.className = `bubble ${role === "user" ? 'user' : 'bot'}`;
+  bubble.innerText = text;
+  msg.appendChild(bubble);
+  box.appendChild(msg);
+  box.scrollTop = box.scrollHeight;
 }
 
 function sendMessage() {
-  const message = document.getElementById("message").value.trim();
-  const model = document.getElementById("model").value;
-  if (!message) return;
-
-  appendMessage("user", message);
+  const msg = document.getElementById("message").value.trim();
+  if (!msg) return;
   document.getElementById("message").value = "";
-
+  append("user", msg);
   fetch('/chat', {
     method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ session_id, message, model })
+    headers: {'Content-Type': 'application/json'},
+    body: JSON.stringify({ session_id, message: msg, model: document.getElementById("model").value })
   })
   .then(res => res.json())
   .then(data => {
     history = data.history;
-    appendMessage("assistant", data.reply);
+    append("assistant", data.reply);
   });
 }
 
 function regenerate() {
   fetch('/chat', {
     method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
+    headers: {'Content-Type': 'application/json'},
     body: JSON.stringify({ session_id, message: "[REPEAT_LAST]", model: document.getElementById("model").value })
   })
   .then(res => res.json())
   .then(data => {
     history = data.history;
-    appendMessage("assistant", data.reply + " (재생성)");
+    append("assistant", data.reply + " (재생성)");
   });
 }
 
 function save() {
-  const blob = new Blob([JSON.stringify(history, null, 2)], { type: "application/json" });
+  const blob = new Blob([JSON.stringify(history, null, 2)], {type: "application/json"});
   const a = document.createElement("a");
   a.href = URL.createObjectURL(blob);
   a.download = "chat_history.json";
@@ -99,33 +122,32 @@ function save() {
 document.getElementById("fileUpload").addEventListener("change", function () {
   const file = this.files[0];
   if (!file) return;
-  const form = new FormData();
-  form.append("file", file);
+  const form = new FormData(); form.append("file", file);
   fetch("/upload", { method: "POST", body: form })
     .then(res => res.json())
     .then(data => document.getElementById("uploadResult").value = data.content);
 });
 
 document.getElementById("imageUpload").addEventListener("change", function () {
-  const file = this.files[0];
-  if (!file) return;
-  const form = new FormData();
-  form.append("file", file);
+  const file = this.files[0]; if (!file) return;
+  const form = new FormData(); form.append("file", file);
   fetch("/image", { method: "POST", body: form })
     .then(res => res.json())
     .then(data => document.getElementById("imageResult").value = data.description);
 });
 
 document.getElementById("voiceUpload").addEventListener("change", function () {
-  const file = this.files[0];
-  if (!file) return;
-  const form = new FormData();
-  form.append("file", file);
+  const file = this.files[0]; if (!file) return;
+  const form = new FormData(); form.append("file", file);
   fetch("/voice", { method: "POST", body: form })
     .then(res => res.json())
     .then(data => document.getElementById("voiceResult").value = data.text);
 });
-</script>
 
+function toggleDark() {
+  document.body.classList.toggle("dark-mode");
+  document.getElementById("chatbox").classList.toggle("dark");
+}
+</script>
 </body>
 </html>
