--- a/GPTChatbotWeb/frontend/index.html
+++ b/GPTChatbotWeb/frontend/index.html
@@ -2,65 +2,36 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GPT 챗봇</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>GPT Chat - ChatGPT 스타일</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
-    body.dark-mode { background-color: #121212; color: #f8f9fa; }
-    .chatbox { height: 400px; overflow-y: scroll; background: #f1f1f1; padding: 1em; border-radius: 0.5em; }
-    .chatbox.dark { background: #222; color: #f1f1f1; }
-    .msg-user { text-align: right; margin: 0.5em 0; }
-    .msg-bot { text-align: left; margin: 0.5em 0; }
+    body.dark-mode { background: #121212; color: #eee; }
+    .chatbox { height: 500px; overflow-y: auto; background: #f9f9f9; padding: 1em; border-radius: 0.75em; }
+    .chatbox.dark { background: #222; }
     .bubble { display: inline-block; padding: 0.6em 1em; border-radius: 1em; max-width: 75%; }
-    .bubble.user { background-color: #007bff; color: white; }
-    .bubble.bot { background-color: #e9ecef; color: #000; }
-    body.dark-mode .bubble.bot { background-color: #444; color: #f1f1f1; }
-    .section { margin-top: 2em; }
+    .msg-user { text-align: right; }
+    .bubble.user { background: #0d6efd; color: #fff; }
+    .msg-bot { text-align: left; }
+    .bubble.bot { background: #e0e0e0; color: #000; }
+    .dark-mode .bubble.bot { background: #444; color: #eee; }
   </style>
 </head>
 <body class="bg-light">
 
 <div class="container mt-4">
-  <div class="d-flex justify-content-between align-items-center">
-    <h2>🤖 GPT 챗봇</h2>
-    <button class="btn btn-sm btn-outline-secondary" id="darkToggle" onclick="toggleDark()">🌙</button>
+  <div class="d-flex justify-content-between">
+    <h2>🧠 GPT Chat</h2>
+    <button class="btn btn-sm btn-outline-secondary" onclick="toggleDark()">🌙</button>
   </div>
 
   <div id="chatbox" class="chatbox mt-3"></div>
 
-  <div class="mt-3">
-    <input class="form-control" id="message" placeholder="메시지를 입력하세요...">
-    <div class="row mt-2">
-      <div class="col-md-6">
-        <select id="model" class="form-select">
-          <option value="gpt-4">GPT-4</option>
-          <option value="gpt-3.5-turbo">GPT-3.5</option>
-        </select>
-      </div>
-      <div class="col-md-6 d-flex gap-2">
-        <button class="btn btn-primary w-100" onclick="sendMessage()">보내기</button>
-        <button class="btn btn-secondary" onclick="regenerate()">↺</button>
-        <button class="btn btn-success" onclick="save()">💾</button>
-      </div>
-    </div>
-  </div>
-
-  <div class="section">
-    <label class="form-label">📁 파일 업로드</label>
-    <input type="file" id="fileUpload" class="form-control" accept=".pdf,.txt">
-    <textarea id="uploadResult" class="form-control mt-2" rows="3" readonly></textarea>
-  </div>
-
-  <div class="section">
-    <label class="form-label">🖼 이미지 설명</label>
-    <input type="file" id="imageUpload" class="form-control" accept="image/*">
-    <textarea id="imageResult" class="form-control mt-2" rows="3" readonly></textarea>
-  </div>
-
-  <div class="section">
-    <label class="form-label">🎤 음성 입력</label>
-    <input type="file" id="voiceUpload" class="form-control" accept="audio/*">
-    <textarea id="voiceResult" class="form-control mt-2" rows="2" readonly></textarea>
+  <div class="input-group mt-3">
+    <input id="message" class="form-control" placeholder="메시지를 입력하세요..." />
+    <button class="btn btn-primary" onclick="sendMessage()">보내기</button>
+    <button class="btn btn-outline-secondary" onclick="regenerate()">↺</button>
+    <button class="btn btn-outline-success" onclick="save()">💾</button>
   </div>
 </div>
 
@@ -70,26 +41,25 @@ localStorage.setItem("session_id", session_id);
 let history = [];
 
 function append(role, text) {
-  const box = document.getElementById("chatbox");
-  const msg = document.createElement("div");
-  msg.className = role === "user" ? "msg-user" : "msg-bot";
+  const div = document.createElement("div");
+  div.className = role === "user" ? "msg-user my-2" : "msg-bot my-2";
   const bubble = document.createElement("div");
-  bubble.className = `bubble ${role === "user" ? 'user' : 'bot'}`;
+  bubble.className = "bubble " + (role === "user" ? "user" : "bot");
   bubble.innerText = text;
-  msg.appendChild(bubble);
-  box.appendChild(msg);
-  box.scrollTop = box.scrollHeight;
+  div.appendChild(bubble);
+  document.getElementById("chatbox").appendChild(div);
+  document.getElementById("chatbox").scrollTop = 99999;
 }
 
 function sendMessage() {
   const msg = document.getElementById("message").value.trim();
   if (!msg) return;
-  document.getElementById("message").value = "";
   append("user", msg);
+  document.getElementById("message").value = "";
   fetch('/chat', {
-    method: 'POST',
-    headers: {'Content-Type': 'application/json'},
-    body: JSON.stringify({ session_id, message: msg, model: document.getElementById("model").value })
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ session_id, message: msg, model: "gpt-4" })
   })
   .then(res => res.json())
   .then(data => {
@@ -100,9 +70,9 @@ function sendMessage() {
 
 function regenerate() {
   fetch('/chat', {
-    method: 'POST',
-    headers: {'Content-Type': 'application/json'},
-    body: JSON.stringify({ session_id, message: "[REPEAT_LAST]", model: document.getElementById("model").value })
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ session_id, message: "[REPEAT_LAST]", model: "gpt-4" })
   })
   .then(res => res.json())
   .then(data => {
@@ -118,31 +88,6 @@ function save() {
   a.download = "chat_history.json";
   a.click();
 }
-
-document.getElementById("fileUpload").addEventListener("change", function () {
-  const file = this.files[0];
-  if (!file) return;
-  const form = new FormData(); form.append("file", file);
-  fetch("/upload", { method: "POST", body: form })
-    .then(res => res.json())
-    .then(data => document.getElementById("uploadResult").value = data.content);
-});
-
-document.getElementById("imageUpload").addEventListener("change", function () {
-  const file = this.files[0]; if (!file) return;
-  const form = new FormData(); form.append("file", file);
-  fetch("/image", { method: "POST", body: form })
-    .then(res => res.json())
-    .then(data => document.getElementById("imageResult").value = data.description);
-});
-
-document.getElementById("voiceUpload").addEventListener("change", function () {
-  const file = this.files[0]; if (!file) return;
-  const form = new FormData(); form.append("file", file);
-  fetch("/voice", { method: "POST", body: form })
-    .then(res => res.json())
-    .then(data => document.getElementById("voiceResult").value = data.text);
-});
 
 function toggleDark() {
   document.body.classList.toggle("dark-mode");
